# atr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: agno_example.py  basic_usage.py  langgraph_example.py  litellm_example.py  openai_agents_example.py
src/atr/: __init__.py
src/atr/adapters/: __init__.py  agno.py  base.py  langchain.py  litellm.py  mcp.py  openai.py
src/atr/core/: __init__.py  exceptions.py  router.py  strategies.py  tool.py
src/atr/integrations/: __init__.py  agno.py  langgraph.py  openai_agents.py
src/atr/llm/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
tests/: __init__.py  conftest.py  test_adapters_agno.py  test_adapters_base.py  test_adapters_langchain.py  test_adapters_mcp.py  test_adapters_openai.py  test_core_router.py  test_core_strategies.py  test_core_tool.py  test_exceptions.py  test_integration_litellm.py  test_llm_adapters.py  test_llm_base.py  test_public_api.py
