[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-tools"
version = "0.1.1"
description = "Adaptive Tool Routing - Dynamic tool selection for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "yess.ai", email = "contact@yess.ai" }
]
keywords = [
    "ai",
    "agents",
    "tools",
    "routing",
    "mcp",
    "langchain",
    "langgraph",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# LLM providers
openrouter = ["openai>=1.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]

# Tool adapters
mcp = ["mcp>=1.0.0"]
langchain = ["langchain-core>=0.2.0"]

# Framework integrations
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
]
agno = [
    "agno>=1.0.0",
    "mcp>=1.0.0",
]
openai-agents = ["openai-agents>=0.1.0"]
litellm = ["litellm>=1.0.0"]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

# All optional dependencies
all = [
    "adaptive-tools[openrouter,openai,anthropic,mcp,langchain,langgraph,agno,openai-agents,litellm]",
]

[project.urls]
Homepage = "https://github.com/yess-ai/atr"
Documentation = "https://github.com/yess-ai/atr#readme"
Repository = "https://github.com/yess-ai/atr"
Issues = "https://github.com/yess-ai/atr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["atr"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
